fix: inputs type date and time change to text-align: left

--- a/styles/form.css
+++ b/styles/form.css
@@ -43,6 +43,7 @@ section#form-container header form div.label-input-wrapper input {
 section#form-container header form div.label-input-wrapper input[type="date"],
 section#form-container header form div.label-input-wrapper input[type="time"] {
     appearance: none;
+    text-align: left;
 }
 
 section#form-container header form div.label-input-wrapper input:focus {
